added ai code reviewer project

--- a/projects.html
+++ b/projects.html
@@ -64,14 +64,39 @@
         ╚══════════════════════════════════════════════════════╝
       -->
 
-        <!-- Card 01: Expirify -->
-        <div class="card reveal" data-tags="react,node,mongodb,api">
+        <!-- Card 01: AI Code Reviewer -->
+        <div class="card reveal" data-tags="react,express,api">
           <div class="card-header">
             <span class="card-num">01</span>
+            <div class="card-links">
+              <a href="https://github.com/Anuj-kaushik/ai-code-reviewer" target="_blank"
+                >GitHub ↗</a
+              >
+              <a href="https://ai-code-reviewer-ochre.vercel.app/" target="_blank">GitHub ↗</a>
+            </div>
+          </div>
+          <h2 class="card-title">AI Code Reviewer</h2>
+          <p class="card-desc">
+            Full-stack web application that analyzes user-submitted code and provides AI-powered
+            feedback.
+          </p>
+          <div class="card-tags">
+            <span class="tag">React.js</span>
+            <span class="tag">Express.js</span>
+            <span class="tag"></span>
+            <span class="tag">Groq API</span>
+          </div>
+        </div>
+
+        <!-- Card 02: Expirify -->
+        <div class="card reveal" data-tags="react,node,mongodb,api">
+          <div class="card-header">
+            <span class="card-num">02</span>
             <div class="card-links">
               <a href="https://github.com/Anuj-kaushik/Expirify-Frontend" target="_blank"
                 >GitHub ↗</a
               >
+              <a href="https://ai-code-reviewer-ochre.vercel.app/" target="_blank">Live ↗</a>
             </div>
           </div>
           <h2 class="card-title">Expirify</h2>
@@ -87,10 +112,10 @@
           </div>
         </div>
 
-        <!-- Card 02: Blog App -->
+        <!-- Card 03: Blog App -->
         <div class="card reveal" data-tags="react,appwrite,tailwind">
           <div class="card-header">
-            <span class="card-num">02</span>
+            <span class="card-num">03</span>
             <div class="card-links">
               <a href="https://github.com/Anuj-kaushik/myBlogApp" target="_blank">GitHub ↗</a>
               <a href="https://my-blog-app-oak-five.vercel.app/" target="_blank">Live ↗</a>
