--- a/index.html
+++ b/index.html
@@ -1,166 +1,180 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Anuj Kaushik</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Anuj Kaushik</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=IBM+Plex+Mono:wght@400;500&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=IBM+Plex+Mono:wght@400;500&family=DM+Sans:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- ── NAVIGATION ── -->
+    <nav id="nav">
+      <a href="#hero" class="nav-logo">AK.</a>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
-  <!-- ── NAVIGATION ── -->
-  <nav id="nav">
-    <a href="#hero" class="nav-logo">AK.</a>
-    <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-
-  <!-- ── HERO ── -->
-  <section id="hero">
-    <p class="hero-tag">Based in Roorkee, India</p>
-    <h1>Anuj<br><em>Kaushik</em></h1>
-    <p class="hero-sub">
-      Computer Science student building things for the web —
-      full stack, clean code, and a taste for good UX.
-    </p>
-    <div class="hero-cta">
-      <a href="#projects" class="btn accent">See my work</a>
-      <a href="mailto:anujkaushik2k02@gmail.com" class="btn">Get in touch</a>
-    </div>
-  </section>
-
-
-  <!-- ── ABOUT ── -->
-  <section id="about">
-    <p class="section-label reveal">About</p>
-
-    <div class="about-flex">
-      <div class="about-left">
-        <h2 class="about-heading reveal">
-          Building<br>thoughtful<br><em>interfaces</em>
-        </h2>
+    <!-- ── HERO ── -->
+    <section id="hero">
+      <p class="hero-tag">Based in Roorkee, India</p>
+      <h1>Anuj<br /><em>Kaushik</em></h1>
+      <p class="hero-sub">
+        Computer Science student building things for the web — full stack, clean code, and a taste
+        for good UX.
+      </p>
+      <div class="hero-cta">
+        <a href="#projects" class="btn accent">See my work</a>
+        <a href="mailto:anujkaushik2k02@gmail.com" class="btn">Get in touch</a>
       </div>
+    </section>
 
-      <div class="about-right reveal">
-        <p>
-          I'm a Computer Science undergraduate passionate about web development and building user-friendly digital experiences.
-        </p>
-        <p>
-          My stack is mostly JavaScript-based — React on the front, Node
-          on the back - but I'm comfortable reaching for Python when the
-          problem calls for it.
-        </p>
-        <!-- <p>
+    <!-- ── ABOUT ── -->
+    <section id="about">
+      <p class="section-label reveal">About</p>
+
+      <div class="about-flex">
+        <div class="about-left">
+          <h2 class="about-heading reveal">Building<br />thoughtful<br /><em>interfaces</em></h2>
+        </div>
+
+        <div class="about-right reveal">
+          <p>
+            I'm a Computer Science undergraduate passionate about web development and building
+            user-friendly digital experiences.
+          </p>
+          <p>
+            My stack is mostly JavaScript-based — React on the front, Node on the back - but I'm
+            comfortable reaching for Python when the problem calls for it.
+          </p>
+          <!-- <p>
           Outside of code I attended a Data Science workshop at IIT Roorkee
           and have been steadily picking up new tools — most recently the
           Postman API certification.
         </p> -->
 
-        <div class="skills-row">
-          <span class="skill-pill">React.js</span>
-          <span class="skill-pill">Node.js</span>
-          <span class="skill-pill">JavaScript</span>
-          <span class="skill-pill">Python</span>
-          <span class="skill-pill">MongoDB</span>
-          <span class="skill-pill">MySQL</span>
-          <span class="skill-pill">Tailwind CSS</span>
-          <span class="skill-pill">Core PHP</span>
-          <span class="skill-pill">Git</span>
-          <span class="skill-pill">Linux</span>
+          <div class="skills-row">
+            <span class="skill-pill">React.js</span>
+            <span class="skill-pill">Node.js</span>
+            <span class="skill-pill">JavaScript</span>
+            <span class="skill-pill">Python</span>
+            <span class="skill-pill">MongoDB</span>
+            <span class="skill-pill">MySQL</span>
+            <span class="skill-pill">Tailwind CSS</span>
+            <span class="skill-pill">Core PHP</span>
+            <span class="skill-pill">Git</span>
+            <span class="skill-pill">Linux</span>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <!-- ── FEATURED PROJECTS ── -->
+    <section id="projects">
+      <p class="section-label reveal">Featured Projects</p>
 
-  <!-- ── FEATURED PROJECTS ── -->
-  <section id="projects">
-    <p class="section-label reveal">Featured Projects</p>
-
-    <div class="projects-list">
-
-      <!-- Project 01 -->
-      <div class="project-item reveal">
-        <div class="project-info">
-          <p class="project-num">01</p>
-          <h3 class="project-title">Expirify</h3>
-          <p class="project-desc">
-            A product expiry tracking system using OCR via Google Vision API
-            to extract dates from packaging — reducing food waste with
-            automated alerts.
-          </p>
+      <div class="projects-list">
+        <!-- Project 01 -->
+        <div class="project-item reveal">
+          <div class="project-info">
+            <p class="project-num">01</p>
+            <h3 class="project-title">AI Code Reviewer</h3>
+            <p class="project-desc">
+              Full-stack web application that analyzes user-submitted code and provides AI-powered
+              feedback.
+            </p>
+          </div>
+          <div class="project-meta">
+            <p class="project-stack">React.js<br />Express.js<br />Groq API</p>
+            <div class="project-links">
+              <a href="https://github.com/Anuj-kaushik/ai-code-reviewer" target="_blank"
+                >GitHub ↗</a
+              >
+              <a href="https://ai-code-reviewer-ochre.vercel.app/" target="_blank">Live ↗</a>
+            </div>
+          </div>
         </div>
-        <div class="project-meta">
-          <p class="project-stack">
-            React.js<br>Node.js<br>MongoDB<br>Google Vision API
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/Anuj-kaushik/Expirify-Frontend" target="_blank">GitHub ↗</a>
+
+        <!-- Project 02 -->
+        <div class="project-item reveal">
+          <div class="project-info">
+            <p class="project-num">01</p>
+            <h3 class="project-title">Expirify</h3>
+            <p class="project-desc">
+              A product expiry tracking system using OCR via Google Vision API to extract dates from
+              packaging — reducing food waste with automated alerts.
+            </p>
+          </div>
+          <div class="project-meta">
+            <p class="project-stack">React.js<br />Node.js<br />MongoDB<br />Google Vision API</p>
+            <div class="project-links">
+              <a href="https://github.com/Anuj-kaushik/Expirify-Frontend" target="_blank"
+                >GitHub ↗</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 03 -->
+        <div class="project-item reveal">
+          <div class="project-info">
+            <p class="project-num">04</p>
+            <h3 class="project-title">Blog App</h3>
+            <p class="project-desc">
+              A responsive blog platform with secure auth, dynamic content creation, and cloud
+              storage via Appwrite. Fast and effortless to publish.
+            </p>
+          </div>
+          <div class="project-meta">
+            <p class="project-stack">React.js<br />Tailwind CSS<br />Appwrite<br />Vite</p>
+            <div class="project-links">
+              <a href="https://github.com/Anuj-kaushik/myBlogApp" target="_blank">GitHub ↗</a>
+              <a href="https://my-blog-app-oak-five.vercel.app/" target="_blank">Live ↗</a>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Project 02 -->
-      <div class="project-item reveal">
-        <div class="project-info">
-          <p class="project-num">02</p>
-          <h3 class="project-title">Blog App</h3>
-          <p class="project-desc">
-            A responsive blog platform with secure auth, dynamic content
-            creation, and cloud storage via Appwrite. Fast and effortless
-            to publish.
-          </p>
-        </div>
-        <div class="project-meta">
-          <p class="project-stack">
-            React.js<br>Tailwind CSS<br>Appwrite<br>Vite
-          </p>
-          <div class="project-links">
-            <a href="https://github.com/Anuj-kaushik/myBlogApp" target="_blank">GitHub ↗</a>
-            <a href="https://my-blog-app-oak-five.vercel.app/" target="_blank">Live ↗</a>
-          </div>
+      <!-- Link to the full projects page -->
+      <div class="view-all-row reveal">
+        <a href="projects.html" class="view-all-link">View all projects →</a>
+      </div>
+    </section>
+
+    <!-- ── EXPERIENCE ── -->
+    <section id="experience">
+      <p class="section-label reveal">Experience</p>
+
+      <!-- Internship -->
+      <div class="exp-item reveal">
+        <div class="exp-date">Jun - Aug 2024</div>
+        <div class="exp-details">
+          <h3 class="exp-role">Intern</h3>
+          <p class="exp-company">Explorin Academy - Summer Internship</p>
+          <ul class="exp-points">
+            <li>Solved 100+ algorithmic problems across data structures and time complexity.</li>
+            <li>Built multiple responsive web apps with a focus on UX and design principles.</li>
+            <li>
+              Attended a 3-day Data Science workshop at IIT Roorkee - Python, data analysis, intro
+              to ML.
+            </li>
+          </ul>
         </div>
       </div>
 
-    </div>
-
-    <!-- Link to the full projects page -->
-    <div class="view-all-row reveal">
-      <a href="projects.html" class="view-all-link">View all projects →</a>
-    </div>
-  </section>
-
-
-  <!-- ── EXPERIENCE ── -->
-  <section id="experience">
-    <p class="section-label reveal">Experience</p>
-
-    <!-- Internship -->
-    <div class="exp-item reveal">
-      <div class="exp-date">Jun - Aug 2024</div>
-      <div class="exp-details">
-        <h3 class="exp-role">Intern</h3>
-        <p class="exp-company">Explorin Academy - Summer Internship</p>
-        <ul class="exp-points">
-          <li>Solved 100+ algorithmic problems across data structures and time complexity.</li>
-          <li>Built multiple responsive web apps with a focus on UX and design principles.</li>
-          <li>Attended a 3-day Data Science workshop at IIT Roorkee - Python, data analysis, intro to ML.</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Postman cert -->
-    <!-- <div class="exp-item reveal">
+      <!-- Postman cert -->
+      <!-- <div class="exp-item reveal">
       <div class="exp-date">Jun 2025</div>
       <div class="exp-details">
         <h3 class="exp-role">Postman API Fundamentals</h3>
@@ -171,8 +185,8 @@
       </div>
     </div> -->
 
-    <!-- NPTEL cert -->
-    <!-- <div class="exp-item reveal">
+      <!-- NPTEL cert -->
+      <!-- <div class="exp-item reveal">
       <div class="exp-date">Jan - Apr 2024</div>
       <div class="exp-details">
         <h3 class="exp-role">Computer Network & Internet Protocol</h3>
@@ -182,39 +196,32 @@
         </ul>
       </div>
     </div> -->
+    </section>
 
-  </section>
-
-
-  <!-- ── CONTACT ── -->
-  <section id="contact">
-    <p class="section-label reveal">Contact</p>
-    <h2 class="contact-heading reveal">
-      Let's build something<br><em>worth using.</em>
-    </h2>
-    <div class="contact-row reveal">
-      <div class="contact-item">
-        <span class="contact-item-label">Email</span>
-        <a href="mailto:anujkaushik2k02@gmail.com" class="contact-item-value">
-          anujkaushik2k02@gmail.com
-        </a>
+    <!-- ── CONTACT ── -->
+    <section id="contact">
+      <p class="section-label reveal">Contact</p>
+      <h2 class="contact-heading reveal">Let's build something<br /><em>worth using.</em></h2>
+      <div class="contact-row reveal">
+        <div class="contact-item">
+          <span class="contact-item-label">Email</span>
+          <a href="mailto:anujkaushik2k02@gmail.com" class="contact-item-value">
+            anujkaushik2k02@gmail.com
+          </a>
+        </div>
+        <div class="contact-item">
+          <span class="contact-item-label">Phone</span>
+          <a href="tel:+919027786975" class="contact-item-value"> +91 9027786975 </a>
+        </div>
       </div>
-      <div class="contact-item">
-        <span class="contact-item-label">Phone</span>
-        <a href="tel:+919027786975" class="contact-item-value">
-          +91 9027786975
-        </a>
-      </div>
-    </div>
-  </section>
+    </section>
 
+    <!-- ── FOOTER ── -->
+    <footer>
+      <span>Anuj Kaushik &copy; 2026</span>
+      <span>Roorkee, Uttarakhand</span>
+    </footer>
 
-  <!-- ── FOOTER ── -->
-  <footer>
-    <span>Anuj Kaushik &copy; 2026</span>
-    <span>Roorkee, Uttarakhand</span>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
